improvement:improve in auth feature
