# features/auth/dtos/response.go
@@ -1,8 +1,0 @@
-package dtos
-
-type ResUser struct {
-	Name         string `json:"name" example:"John Doe"`
-	UserType     string `json:"user_type" example:"admin"`
-	AccessToken  string `json:"access_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
-	RefreshToken string `json:"refresh_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
-}
