# routes/auth.go
@@ -1,18 +1,14 @@
 package routes
 
 import (
-	"pelaporan_keuangan/features/auth"
+	"pelaporan_keuangan/features/users"
 
 	"github.com/gin-gonic/gin"
 )
 
-func Auth(r *gin.Engine, handler auth.Handler) {
+func Auth(r *gin.Engine, handler users.Handler) {
 	auth := r.Group("/api/v1/auth")
 
-	auth.GET("", handler.GetAuth)
-	auth.POST("", handler.CreateAuth)
-
-	auth.GET("/:id", handler.AuthDetails)
-	auth.PUT("/:id", handler.UpdateAuth)
-	auth.DELETE("/:id", handler.DeleteAuth)
+	auth.POST("/login", handler.Login)
+	auth.POST("/register", handler.CreateUser)
 }
