# routes/users.go
@@ -10,9 +10,10 @@ func Users(r *gin.Engine, handler users.Handler) {
 	users := r.Group("/api/v1/users")
 
 	users.GET("", handler.GetUsers)
-	users.POST("", handler.CreateUsers)
+	users.POST("", handler.CreateUser)
 
-	users.GET("/:id", handler.UsersDetails)
-	users.PUT("/:id", handler.UpdateUsers)
-	users.DELETE("/:id", handler.DeleteUsers)
+	users.GET("/:id", handler.UserDetails)
+	users.PUT("/:id", handler.UpdateUser)
+	users.DELETE("/:id", handler.DeleteUser)
+
 }
